# line-following-robot

./: .gitignore  PID.cpp  PID.hpp  README.md
bot_setup/ros2_ws/src/bot_bringup/: CMakeLists.txt  package.xml
bot_setup/ros2_ws/src/bot_bringup/launch/: bot_app.xml  motor_controller.xml
bot_setup/ros2_ws/src/bot_interfaces/: package.xml
bot_setup/ros2_ws/src/bot_interfaces/action/: MotorsInstruct.action
bot_setup/ros2_ws/src/bot_manager/: package.xml  setup.py
bot_setup/ros2_ws/src/bot_manager/bot_manager/: robot_manager_node.py
bot_setup/ros2_ws/src/bot_motors/: CMakeLists.txt  package.xml
bot_setup/ros2_ws/src/bot_motors/include/bot_motors/: device.hpp  digitalOutputDevice.hpp  motorDriver.hpp
bot_setup/ros2_ws/src/bot_motors/src/: device.cpp  digitalOutputDevice.cpp  motorControllerNode.cpp  motorDriver.cpp
bot_setup/ros2_ws/src/bot_video/: package.xml  setup.cfg  setup.py
bot_setup/ros2_ws/src/bot_video/bot_video/: PID.py  PID_video_node.py  clients.txt  video_broadcast.py
bot_setup/ros2_ws/src/bot_video/config/: params.yaml
computer_vision/: image_color_tracking.ipynb  line_trackor.ipynb  pid_video.py  video_colored_object_detector.py
remote_setup/: Dockerfile
remote_setup/ros2_ws/src/bot_interfaces/: CMakeLists.txt
remote_setup/ros2_ws/src/remote_controller/: package.xml  setup.cfg  setup.py
remote_setup/ros2_ws/src/remote_controller/remote_controller/: controller_data.py  controller_node.py
remote_setup/ros2_ws/src/remote_video/: video_feed.py
remote_setup/scripts/: build.bash  run.bash
